Describing the mission of this fork and rebranding the application

--- a/App.config
+++ b/App.config
@@ -2,7 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="NotePadWF_CS.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="NotepadMinimal.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
@@ -12,7 +12,7 @@
     <add key="DpiAwareness" value="PerMonitorV2" />
   </System.Windows.Forms.ApplicationConfigurationSection>
     <userSettings>
-        <NotePadWF_CS.Properties.Settings>
+        <NotepadMinimal.Properties.Settings>
             <setting name="MyLocation" serializeAs="String">
                 <value>150, 150</value>
             </setting>
@@ -37,6 +37,6 @@
             <setting name="MySize" serializeAs="String">
                 <value>1200, 800</value>
             </setting>
-        </NotePadWF_CS.Properties.Settings>
+        </NotepadMinimal.Properties.Settings>
     </userSettings>
 </configuration>
