--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="NotePadWF_CS.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="NotepadMinimal.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="MyLocation" Type="System.Drawing.Point" Scope="User">
